cmake_minimum_required(VERSION 3.15)
project(Argon VERSION 0.3.0)

set(AR_MAJOR ${PROJECT_VERSION_MAJOR})
set(AR_MINOR ${PROJECT_VERSION_MINOR})
set(AR_PATCH ${PROJECT_VERSION_PATCH})
set(AR_RELEASE_LEVEL "alpha")

set(BASE_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

if (${CMAKE_BUILD_TYPE} MATCHES "Release")
    set(BASE_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}")
endif ()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BASE_OUTPUT_DIRECTORY})

set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 17)

if (MSVC)
    set(CMAKE_CXX_STANDARD 20)
endif ()

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif ()

include_directories(src)

add_subdirectory(lib/stratum)
add_subdirectory(src)
add_subdirectory(test)

file(COPY arlib/ DESTINATION ${BASE_OUTPUT_DIRECTORY}/packages)
